# circle_ci

./: .coverage  .gitignore  codecov.yml  coverage.xml  pyproject.toml
.ci/: Dockerfile
.circleci/: config.yml
circle_ci/: __init__.py
tests/: test_circle_ci.py
