[tool.poetry]
name = "circle_ci"
version = "0.1.0"
description = ""
authors = ["Simone Biffi <simone.biffi.91@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
flake8 = "^3.7.9"
pylint = "^2.4.4"
mypy = "^0.770"
codecov = "^2.0.22"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
